finished structural changes in html

--- a/about.html
+++ b/about.html
@@ -18,6 +18,41 @@
         <a  href="contact.html">CONTACT</a>
         </div>
     </nav>
+
+    <section>
+        <div class="non-home-hero">
+         
+            <div class="non-home-hero__content">
+                <h1>hey </h1>
+                <p>pal</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="about-company">
+        <div class="about-company__img"></div>
+        <div class="about-company__content"></div>
+
+    </section>
+    <section class="about-gym">
+        <div class="about-gym__content">
+            <h2></h2>
+            <p></p>
+        </div>
+    </section>
+    <section class="about-membership">
+        <div class="about-membership__text">
+            <h2></h2>
+            <p></p>
+        </div>
+        <div class="membership-tiers">
+            <div class="membership-tiers__item"></div>
+            <div class="membership-tiers__item"></div>
+            <div class="membership-tiers__item"></div>
+        </div>
+    </section>
+
     <footer>
 
         <div class="footer">
