--- a/our-team.html
+++ b/our-team.html
@@ -18,6 +18,42 @@
         <a  href="contact.html">CONTACT</a>
         </div>
     </nav>
+    <section>
+        <div class="non-home-hero">
+            <div class="non-home-hero__content">
+                <h1>hey </h1>
+                <p>pal</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section>
+        <div class="our-ceo">
+            <div class="our-ceo__img"></div>
+            <div class="our-ceo__text">
+                <h2></h2>
+                <p></p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="leadership">
+            <div class="leadership__text"></div>
+            <div class="leadership__team">
+                <div class="leadership__team__item"></div>
+                <div class="leadership__team__item"></div>
+                <div class="leadership__team__item"></div>
+                <div class="leadership__team__item"></div>
+                <div class="leadership__team__item"></div>
+                <div class="leadership__team__item"></div>
+                <div class="leadership__team__item"></div>
+                <div class="leadership__team__item"></div>
+            </div>
+        </div>
+    </section>
+
     <footer>
 
         <div class="footer">
