--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,44 @@
         <a  href="contact.html">CONTACT</a>
         </div>
     </nav>
+
+    <section>
+        <div class="non-home-hero">
+            <div class="non-home-hero__content">
+                <h1>hey </h1>
+                <p>pal</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section>
+        <div class="contact-info">
+            <h2 class="contact-info__header"></h2>
+            <p class="contact-info__text"></p>
+            <p class="contact-info__text"></p>
+            <p class="contact-info__text"></p>
+            <p class="contact-info__text"></p>
+        </div>
+    </section>
+
+    <section>
+        <div class="visit-us">
+            <div class="visit-us__map"></div>
+            <div class="visit-us__form">
+                <h2></h2>
+                <form action="post">
+                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder = "Last Name">
+                    <input type="email" placeholder="Email">
+                    <input type="tel" placeholder = "xxx-xxx-xxxx">
+                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    <button>Submit</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <footer>
 
         <div class="footer">
