finish up formatting and copy, needs images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Fitness</title>
+    <link href='https://fonts.googleapis.com/css?family=Fjalla One' rel='stylesheet'>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -21,8 +22,8 @@
     <section>
         <div class="hero">
             <div class="hero__content">
-                <h1>hey </h1>
-                <p>pal</p>
+                <h1>Sports Fitness</h1>
+                <p>We know fitness</p>
             </div>
 
         </div>
@@ -41,15 +42,19 @@
 
     <section>
         <h2 class="amenities-title">
-            check out all the stuff
+            check out all the amenities we have!
         </h2>
         <div class="amenities">
-            <div class="amenities__item">one</div>
-            <div class="amenities__item">two</div>
-            <div class="amenities__item">three</div>
-            <div class="amenities__item">four</div>
-            <div class="amenities__item">five</div>
-            <div class="amenities__item">six</div>
+            <div class="amenities__item">
+                Spa-like Locker Rooms
+            </div>
+            <div class="amenities__item">Massage Chairs</div>
+            <div class="amenities__item">Sauna/Steam Room</div>
+            <div class="amenities__item">
+                Pilates Reformer Classes
+            </div>
+            <div class="amenities__item">Hot Yoga Classes</div>
+            <div class="amenities__item">HIIT Classes</div>
         </div>
     </section>
 
@@ -66,10 +71,10 @@
 
         <div class="footer__contact">
             <h3>get in touch</h3>
-            <p>Address</p>
-            <p>Phone number</p>
-            <p>email</p>
-            <p>fax</p>
+            <p>123 Main Street</p>
+            <p>(123) 456-7890</p>
+            <p>sportsfitness@email.com</p>
+            <p>(098) 765-4321</p>
         </div>
         
         <div class="footer__brands">
