--- a/our-team.html
+++ b/our-team.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Fitness</title>
+    <link href='https://fonts.googleapis.com/css?family=Fjalla One' rel='stylesheet'>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -21,8 +22,7 @@
     <section>
         <div class="non-home-hero">
             <div class="non-home-hero__content">
-                <h1>hey </h1>
-                <p>pal</p>
+                <h1>Meet Our Team</h1>
             </div>
 
         </div>
@@ -32,24 +32,62 @@
         <div class="our-ceo">
             <div class="our-ceo__img"></div>
             <div class="our-ceo__text">
-                <h2></h2>
-                <p></p>
+                <h2>HER NAME</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae mollitia optio inventore, vel deleniti totam velit, doloribus doloremque vero ex id facilis provident blanditiis odio error quaerat quidem ipsum ullam!</p>
             </div>
         </div>
     </section>
 
     <section>
         <div class="leadership">
-            <div class="leadership__text"></div>
+            <div class="leadership__text">
+                <h2>
+                    Our Leadership Team
+                </h2>
+            </div>
             <div class="leadership__team">
-                <div class="leadership__team__item"></div>
-                <div class="leadership__team__item"></div>
-                <div class="leadership__team__item"></div>
-                <div class="leadership__team__item"></div>
-                <div class="leadership__team__item"></div>
-                <div class="leadership__team__item"></div>
-                <div class="leadership__team__item"></div>
-                <div class="leadership__team__item"></div>
+                <div class="leadership__team__item">
+                    <div class="leadership__team__item__img"></div>
+                    <div class="leadership__team__item__name">
+                        Full Name
+                    </div>
+                </div>
+                <div class="leadership__team__item">
+                    <div class="leadership__team__item__img"></div>
+                    <div class="leadership__team__item__name">
+                        Full Name
+                    </div>
+                </div>
+                <div class="leadership__team__item">
+                    <div class="leadership__team__item__img"></div>
+                    <div class="leadership__team__item__name">
+                        Full Name
+                    </div>
+                </div>
+                <div class="leadership__team__item">
+                    <div class="leadership__team__item__img"></div>
+                    <div class="leadership__team__item__name">
+                        Full Name
+                    </div>
+                </div>
+                <div class="leadership__team__item">
+                    <div class="leadership__team__item__img"></div>
+                    <div class="leadership__team__item__name">
+                        Full Name
+                    </div>
+                </div>
+                <div class="leadership__team__item">
+                    <div class="leadership__team__item__img"></div>
+                    <div class="leadership__team__item__name">Full Name</div>
+                </div>
+                <div class="leadership__team__item">
+                    <div class="leadership__team__item__img"></div>
+                    <div class="leadership__team__item__name">Full Name</div>
+                </div>
+                <div class="leadership__team__item">
+                    <div class="leadership__team__item__img"></div>
+                    <div class="leadership__team__item__name">Full Name</div>
+                </div>
             </div>
         </div>
     </section>
@@ -67,10 +105,10 @@
 
         <div class="footer__contact">
             <h3>get in touch</h3>
-            <p>Address</p>
-            <p>Phone number</p>
-            <p>email</p>
-            <p>fax</p>
+            <p>123 Main Street</p>
+            <p>(123) 456-7890</p>
+            <p>sportsfitness@email.com</p>
+            <p>(098) 765-4321</p>
         </div>
         
         <div class="footer__brands">
