--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Fitness</title>
+    <link href='https://fonts.googleapis.com/css?family=Fjalla One' rel='stylesheet'>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -23,8 +24,7 @@
         <div class="non-home-hero">
          
             <div class="non-home-hero__content">
-                <h1>hey </h1>
-                <p>pal</p>
+                <h1>Learn a Little More About Us</h1>
             </div>
 
         </div>
@@ -32,25 +32,42 @@
 
     <section class="about-company">
         <div class="about-company__img"></div>
-        <div class="about-company__content"></div>
+        <div class="about-company__content">
+            <h2>LOREM</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum neque corrupti exercitationem quis ullam officiis, aperiam repudiandae ipsam nulla distinctio magnam perspiciatis excepturi maiores provident velit! Sit nisi debitis eaque!</p>
+        </div>
 
     </section>
     <section class="about-gym">
         <div class="about-gym__content">
-            <h2></h2>
-            <p></p>
+            <h2>Your Home Gym</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, fuga doloremque. Consequuntur deleniti quis ab distinctio fuga provident, adipisci repudiandae dolor voluptas, aperiam blanditiis saepe, quas ut atque minus! Dolorum?</p>
         </div>
     </section>
-    <section class="about-membership">
-        <div class="about-membership__text">
-            <h2></h2>
-            <p></p>
+    <section>
+        <div class="about-membership">
+            <h2>join our gym</h2>
         </div>
-        <div class="membership-tiers">
-            <div class="membership-tiers__item"></div>
-            <div class="membership-tiers__item"></div>
-            <div class="membership-tiers__item"></div>
+    <div class="membership-tiers">
+        <div class="membership-tiers__item">
+            <h3 class="tier-name">Basic</h3>
+            <p>Includes regular gym floor</p>
+            <p>Startup fee: $99</p>
+            <h3 class="tier-price">$10 a month</h3>
         </div>
+        <div class="membership-tiers__item">
+            <h3 class="tier-name">Fitness</h3>
+            <p>Includes gym floor and group fitness classes</p>
+            <p>Startup fee: $49</p>
+            <h3 class="tier-price">$20 a month</h3>
+        </div>
+        <div class="membership-tiers__item">
+            <h3 class="tier-name">Premium</h3>
+            <p>Includes gym floor, group fitness and premium perks</p>
+            <p>Startup fee: $0</p>
+            <h3 class="tier-price">$40 a month</h3>
+        </div>
+    </div>
     </section>
 
     <footer>
@@ -66,10 +83,10 @@
 
         <div class="footer__contact">
             <h3>get in touch</h3>
-            <p>Address</p>
-            <p>Phone number</p>
-            <p>email</p>
-            <p>fax</p>
+            <p>123 Main Street</p>
+            <p>(123) 456-7890</p>
+            <p>sportsfitness@email.com</p>
+            <p>(098) 765-4321</p>
         </div>
         
         <div class="footer__brands">
