responsive down to 800 width and updated images

--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
     <nav class="nav">
         <div class="nav__logo"><img src="images/fitnesslogo.png" alt=""></div>
         <div class="nav__links">
-        <a  href="index.html">HOME</a>
-        <a  href="about.html">ABOUT</a>
-        <a  href="our-team.html">OUR TEAM</a>
-        <a  href="contact.html">CONTACT</a>
+        <a  href="index.html">home</a>
+        <a  href="about.html">about</a>
+        <a  href="our-team.html">our team</a>
+        <a  href="contact.html">contact</a>
         </div>
     </nav>
 
@@ -24,7 +24,7 @@
         <div class="non-home-hero">
          
             <div class="non-home-hero__content">
-                <h1>Learn a Little More About Us</h1>
+                <h1>learn a little more about us</h1>
             </div>
 
         </div>
@@ -33,14 +33,16 @@
     <section class="about-company">
         <div class="about-company__img"></div>
         <div class="about-company__content">
-            <h2>LOREM</h2>
+            <h2>who we are</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum neque corrupti exercitationem quis ullam officiis, aperiam repudiandae ipsam nulla distinctio magnam perspiciatis excepturi maiores provident velit! Sit nisi debitis eaque!</p>
         </div>
 
     </section>
     <section class="about-gym">
         <div class="about-gym__content">
-            <h2>Your Home Gym</h2>
+            <h2>your</h2>
+            <h2 id="home-gym">home</h2>
+            <h2>gym</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, fuga doloremque. Consequuntur deleniti quis ab distinctio fuga provident, adipisci repudiandae dolor voluptas, aperiam blanditiis saepe, quas ut atque minus! Dolorum?</p>
         </div>
     </section>
@@ -50,21 +52,21 @@
         </div>
     <div class="membership-tiers">
         <div class="membership-tiers__item">
-            <h3 class="tier-name">Basic</h3>
-            <p>Includes regular gym floor</p>
-            <p>Startup fee: $99</p>
+            <h3 class="tier-name">basic</h3>
+            <p>includes regular gym floor</p>
+            <p>startup fee: $99</p>
             <h3 class="tier-price">$10 a month</h3>
         </div>
         <div class="membership-tiers__item">
-            <h3 class="tier-name">Fitness</h3>
-            <p>Includes gym floor and group fitness classes</p>
-            <p>Startup fee: $49</p>
+            <h3 class="tier-name">fitness</h3>
+            <p>includes gym floor and group fitness classes</p>
+            <p>startup fee: $49</p>
             <h3 class="tier-price">$20 a month</h3>
         </div>
         <div class="membership-tiers__item">
-            <h3 class="tier-name">Premium</h3>
-            <p>Includes gym floor, group fitness and premium perks</p>
-            <p>Startup fee: $0</p>
+            <h3 class="tier-name">premium</h3>
+            <p>includes everything, plus premium perks</p>
+            <p>startup fee: $0</p>
             <h3 class="tier-price">$40 a month</h3>
         </div>
     </div>
@@ -75,10 +77,10 @@
         <div class="footer">
         <div class="footer__navigate">
             <h3>look around</h3>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="our-team.html">Our Team</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html">home</a>
+            <a href="about.html">about</a>
+            <a href="our-team.html">our team</a>
+            <a href="contact.html">contact</a>
         </div>
 
         <div class="footer__contact">
