--- a/contact.html
+++ b/contact.html
@@ -13,17 +13,17 @@
     <nav class="nav">
         <div class="nav__logo"><img src="images/fitnesslogo.png" alt=""></div>
         <div class="nav__links">
-        <a  href="index.html">HOME</a>
-        <a  href="about.html">ABOUT</a>
-        <a  href="our-team.html">OUR TEAM</a>
-        <a  href="contact.html">CONTACT</a>
+        <a  href="index.html">home</a>
+        <a  href="about.html">about</a>
+        <a  href="our-team.html">our team</a>
+        <a  href="contact.html">contact</a>
         </div>
     </nav>
 
     <section>
         <div class="non-home-hero">
             <div class="non-home-hero__content">
-                <h1>Chat with Us</h1>
+                <h1>chat with us</h1>
             </div>
 
         </div>
@@ -33,25 +33,25 @@
         <div class="contact-info">
             <div class="contact-info__map"></div>
             <div class="contact-info-text">
-            <h2 class="contact-info__header">Contact us</h2>
-            <p class="contact-info__text">Address: 123 Main Street </p>
-            <p class="contact-info__text">Indianapolis, IN</p>
-            <p class="contact-info__text">Phone Number: (123)456-7890</p>
-            <p class="contact-info__text">Email: sportsfitness@email.com</p>
+            <h2 class="contact-info__header">contact us</h2>
+            <p class="contact-info__text">address: 123 main street </p>
+            <p class="contact-info__text">indianapolis, IN</p>
+            <p class="contact-info__text">phone number: (123)456-7890</p>
+            <p class="contact-info__text">email: sportsfitness@email.com</p>
         </div>
         </div>
     
         <div class="visit-us">
             
             <div class="visit-us__form">
-                <h2>Let's chat!</h2>
+                <h2>let's chat!</h2>
                 <form action="post">
                     <input type="text" placeholder="First Name">
                     <input type="text" placeholder = "Last Name">
                     <input type="email" placeholder="Email">
                     <input type="tel" placeholder = "xxx-xxx-xxxx">
                     <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                    <button>Submit</button>
+                    <button>submit</button>
                 </form>
             </div>
         </div>
@@ -62,10 +62,10 @@
         <div class="footer">
         <div class="footer__navigate">
             <h3>look around</h3>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="our-team.html">Our Team</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html">home</a>
+            <a href="about.html">about</a>
+            <a href="our-team.html">our team</a>
+            <a href="contact.html">contact</a>
         </div>
 
         <div class="footer__contact">
