--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <nav class="nav">
         <div class="nav__logo"><img src="images/fitnesslogo.png" alt=""></div>
         <div class="nav__links">
-        <a  href="index.html">HOME</a>
-        <a  href="about.html">ABOUT</a>
-        <a  href="our-team.html">OUR TEAM</a>
-        <a  href="contact.html">CONTACT</a>
+        <a  href="index.html">home</a>
+        <a  href="about.html">about</a>
+        <a  href="our-team.html">our team</a>
+        <a  href="contact.html">contact</a>
         </div>
     </nav>
     <section>
         <div class="hero">
             <div class="hero__content">
-                <h1>Sports Fitness</h1>
-                <p>We know fitness</p>
+                <h1>sports fitness</h1>
+                <p>we know fitness</p>
             </div>
 
         </div>
@@ -33,7 +33,7 @@
             <div class="home-about__image">
             </div>
             <div class="home-about__content">
-                <h2>Sports Fitness has all the Fitness!</h2>
+                <h2>sports fitness has all the fitness!</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque iste perferendis minus qui impedit numquam cumque, error hic eveniet, eligendi accusamus ex id dolores nam consequatur fuga? Fugit, doloribus atque.</p>
             </div>
 
@@ -46,15 +46,15 @@
         </h2>
         <div class="amenities">
             <div class="amenities__item">
-                Spa-like Locker Rooms
+                spa-like locker rooms
             </div>
-            <div class="amenities__item">Massage Chairs</div>
-            <div class="amenities__item">Sauna/Steam Room</div>
+            <div class="amenities__item">massage chairs</div>
+            <div class="amenities__item">sauna/steam room</div>
             <div class="amenities__item">
-                Pilates Reformer Classes
+                pilates reformer classes
             </div>
-            <div class="amenities__item">Hot Yoga Classes</div>
-            <div class="amenities__item">HIIT Classes</div>
+            <div class="amenities__item">hot yoga classes</div>
+            <div class="amenities__item">hiit classes</div>
         </div>
     </section>
 
@@ -63,10 +63,10 @@
         <div class="footer">
         <div class="footer__navigate">
             <h3>look around</h3>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="our-team.html">Our Team</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html">home</a>
+            <a href="about.html">about</a>
+            <a href="our-team.html">our team</a>
+            <a href="contact.html">contact</a>
         </div>
 
         <div class="footer__contact">
