--- a/our-team.html
+++ b/our-team.html
@@ -13,16 +13,16 @@
     <nav class="nav">
         <div class="nav__logo"><img src="images/fitnesslogo.png" alt=""></div>
         <div class="nav__links">
-        <a  href="index.html">HOME</a>
-        <a  href="about.html">ABOUT</a>
-        <a  href="our-team.html">OUR TEAM</a>
-        <a  href="contact.html">CONTACT</a>
+        <a  href="index.html">home</a>
+        <a  href="about.html">about</a>
+        <a  href="our-team.html">our team</a>
+        <a  href="contact.html">contact</a>
         </div>
     </nav>
     <section>
         <div class="non-home-hero">
             <div class="non-home-hero__content">
-                <h1>Meet Our Team</h1>
+                <h1>meet our team</h1>
             </div>
 
         </div>
@@ -32,7 +32,7 @@
         <div class="our-ceo">
             <div class="our-ceo__img"></div>
             <div class="our-ceo__text">
-                <h2>HER NAME</h2>
+                <h2>our ceo</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae mollitia optio inventore, vel deleniti totam velit, doloribus doloremque vero ex id facilis provident blanditiis odio error quaerat quidem ipsum ullam!</p>
             </div>
         </div>
@@ -42,51 +42,51 @@
         <div class="leadership">
             <div class="leadership__text">
                 <h2>
-                    Our Leadership Team
+                    our leadership team
                 </h2>
             </div>
             <div class="leadership__team">
                 <div class="leadership__team__item">
                     <div class="leadership__team__item__img"></div>
                     <div class="leadership__team__item__name">
-                        Full Name
+                        full name
                     </div>
                 </div>
                 <div class="leadership__team__item">
                     <div class="leadership__team__item__img"></div>
                     <div class="leadership__team__item__name">
-                        Full Name
+                        full name
                     </div>
                 </div>
                 <div class="leadership__team__item">
                     <div class="leadership__team__item__img"></div>
                     <div class="leadership__team__item__name">
-                        Full Name
+                        full name
                     </div>
                 </div>
                 <div class="leadership__team__item">
                     <div class="leadership__team__item__img"></div>
                     <div class="leadership__team__item__name">
-                        Full Name
+                        full name
                     </div>
                 </div>
                 <div class="leadership__team__item">
                     <div class="leadership__team__item__img"></div>
                     <div class="leadership__team__item__name">
-                        Full Name
+                        full name
                     </div>
                 </div>
                 <div class="leadership__team__item">
                     <div class="leadership__team__item__img"></div>
-                    <div class="leadership__team__item__name">Full Name</div>
+                    <div class="leadership__team__item__name">full name</div>
                 </div>
                 <div class="leadership__team__item">
                     <div class="leadership__team__item__img"></div>
-                    <div class="leadership__team__item__name">Full Name</div>
+                    <div class="leadership__team__item__name">full name</div>
                 </div>
                 <div class="leadership__team__item">
                     <div class="leadership__team__item__img"></div>
-                    <div class="leadership__team__item__name">Full Name</div>
+                    <div class="leadership__team__item__name">full name</div>
                 </div>
             </div>
         </div>
@@ -97,10 +97,10 @@
         <div class="footer">
         <div class="footer__navigate">
             <h3>look around</h3>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="our-team.html">Our Team</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html">home</a>
+            <a href="about.html">about</a>
+            <a href="our-team.html">our team</a>
+            <a href="contact.html">contact</a>
         </div>
 
         <div class="footer__contact">
